<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logo_empty"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sight hunt"
            android:textColor="@color/white"
            android:textSize="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <AdapterViewFlipper
            android:id="@+id/adapterViewFlipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </AdapterViewFlipper>

        <com.thehayro.view.InfiniteViewPager
            android:id="@+id/viewPager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:visibility="gone"/>

        <com.sighthunt.view.ViewPagerIndicator
            android:id="@+id/viewPagerIndicator"
            indicatorSize="5dp"
            indicatorSpacing="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/welcome_gradient_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="40dp">

        <com.facebook.widget.LoginButton
            android:id="@+id/authButton"
            style="@style/FacebookLoginButton"
            xmlns:fb="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signup_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            fb:login_text="@string/facebook_button"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signup_button_height"
            android:layout_marginTop="10dp"
            android:background="@color/grey_light"
            android:text="@string/sign_up"
            android:textSize="@dimen/signup_button_text_size"/>

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/log_in"/>
    </LinearLayout>

</RelativeLayout>